[package]
name = "bevy_background_compute"
version = "0.3.0"
edition = "2021"
description = "Bevy plugin for better task handling"
license = "MIT"
repository = "https://github.com/Demiu/bevy_background_compute"
documentation = "https://docs.rs/bevy_background_compute"
keywords = [
    "bevy",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# something with a dedicated oneshot channel would be ideal but bevy already has this as a dep
async-channel = "^1.7.1" 
bevy_app = "0.10"
bevy_ecs = "0.10"
bevy_tasks = "0.10"

[dev-dependencies]
bevy = { version = "0.10", default-features = false }
